# turbodbc

./: .pre-commit-config.yaml  .travis.yml  =1  CHANGELOG.rst  CMakeLists.txt  Earthfile  LICENSE  appveyor.yml  environment.yml  meson.build  mybuild.sh  pixi.toml  pyproject.toml  setup.py  x_read.py  x_write.py
.github/workflows/: ci.yml  conda.yml  update-lockfiles.yml
cmake_scripts/: Findnumpy.cmake  default_build_setup.cmake
cnvxaturbodbc/: cursor.py
contrib/docker/: Dockerfile  Dockerfile-mssql  Dockerfile-turbodbc  README  build_and_test.sh  docker-compose.yml  odbc.ini  odbcinst.ini  start_all_dbs_and_run_tests.sh
cpp/cpp_odbc/: CMakeLists.txt  meson.build
cpp/cpp_odbc/Test/: CMakeLists.txt
cpp/turbodbc/: CMakeLists.txt  meson.build
cpp/turbodbc/Test/: CMakeLists.txt
cpp/turbodbc/Test/tests/: buffer_size_test.cpp  column_test.cpp  configuration_test.cpp  description_test.cpp  field_translator_test.cpp  make_description_of_value_test.cpp  mock_classes.cpp  mock_classes.h  parameter_test.cpp  time_helpers_test.cpp
cpp/turbodbc/Test/tests/field_translators/: boolean_translator_test.cpp  date_translator_test.cpp  float64_translator_test.cpp  int64_translator_test.cpp  string_translator_test.cpp  timestamp_translator_test.cpp
cpp/turbodbc/Test/tests/parameter_sets/: set_field_test.cpp
cpp/turbodbc/Test/tests/result_sets/: field_result_set_test.cpp
cpp/turbodbc_arrow/: CMakeLists.txt  meson.build
cpp/turbodbc_arrow/Test/: CMakeLists.txt
cpp/turbodbc_arrow/Test/tests/: arrow_result_set_test.cpp
cpp/turbodbc_numpy/: CMakeLists.txt
cpp/turbodbc_python/: CMakeLists.txt
docs/pages/: contributing.rst  introduction.rst
earthly/odbc/: odbcinst.ini
odbc_test_linux/: odbcinst.ini
odbc_test_osx/: odbc.ini
python/turbodbc/: __init__.py  connect.py  connection.py  cursor.py
python/turbodbc_test/: CMakeLists.txt  helpers.py  query_fixture.py  test_connect.py  test_connection.py  test_cursor_basics.py  test_cursor_nextset.py  test_select_numpy.py
tests/: test_cursor_basics.py  test_cursor_insert.py  test_executemanycolumns_corner_cases.py  test_has_arrow_support.py  test_has_numpy_support.py  test_select_arrow.py
turbodbc/: arrow_support.py  cursor.py
